# Ai-trip-planner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: deploy.yml
config/: models.yaml  params.yaml
notebooks/: experiments.ipynb  test_tools.ipynb
src/agents/: agentic_workflow.py
src/agents/prompt_library/: __init__.py
src/agents/tools/: currency_conversion_tool.py  expense_calculator_tool.py  place_search_tool.py  weather_information_tool.py
src/infrastructure/: config.py
src/infrastructure/llm_provider/: llm_client.py
src/infrastructure/utils/: calculator.py  currency_convertor.py  place_info_search.py  weather_info.py
