[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "AI-powered travel planner using LangGraph agentic workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web / API
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "requests",
    "streamlit",

    # LangChain / LangGraph
    "langchain>=1.2.7",
    "langchain-core",
    "langchain-openai>=1.1.7",
    "langchain-groq",
    "langchain-tavily",
    "langchain-google-community",
    "langgraph",
    "langgraph-prebuilt",

    # LLM providers
    "openai",
    "groq",
    "openrouter>=0.6.0",

    # External APIs / Tools
    "googlemaps",

    # Utilities
    "python-dotenv",
    "pyyaml",
    "setuptools>=80.10.2",
]
